chore(about): fix max-height is collapsed mode

--- a/app/styles/components/_about.scss
+++ b/app/styles/components/_about.scss
@@ -1,5 +1,5 @@
 .content {
-  max-height: 11rem;
+  max-height: 12rem;
   overflow: hidden;
   transition: max-height 1s;
   font-weight: 300;
